2005-01-18  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlReflectionImporter.cs: Don't check the property type if it has
	an [XmlIgnore] attribute. This fixes bug #71332.

2005-01-14  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGenerator.cs,
	  XmlSerializationWriterInterpreter.cs : exchanged attribute
	  serialization orders (XmlAnyAttribute <-> XmlNamespaceDeclarations).
	  xmlns attributes in XmlAnyAttribute are not written.

2005-01-12  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationCodeGeneratorConfiguration.cs,
	  SerializationCodeGenerator.cs : Added some generation configuration:
		<generateAsInternal>
			write custom reader/writer as internal classes.
		<noreader>, <nowriter>
			They make generation of reader and/or writer optional.
	* XmlSerializerNamespaces.cs :
	  Now it uses ListDictionary instead of Hashtable.
	* XmlSerializationWriter.cs : entries in XmlSerializerNamespaces are
	  written unless there is already the same prefix-ns mapping.

2005-01-12  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlTypeMapElementInfo.cs: Added new IndexOfElement method.
	* XmlSchemaImporter.cs: When importing a base type of a complex type,
	make sure that the base class is always imported as a class and not
	as an array. If it has been imported as array, import it again.
	This fixes bug #70839. Other minor fixes as well.
	* XmlSerializationWriter.cs: Fixed warning.

2004-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* SerializationCodeGenerator.cs: Yet another generation fix.

2004-12-09  Lluis Sanchez Gual <lluis@novell.com>

	* SerializationCodeGenerator.cs: Fixed generation of enum literals.

2004-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlReflectionMember.cs: Added DeclaringType member.
	* XmlReflectionImporter.cs: When importing fields that belong to a
	base class, use the xml namespace of the base map for the member.
	This fixes bug #70309.

2004-11-30  Lluis Sanchez Gual  <lluis@novell.com>
