@@ -232,10 +232,10 @@ namespace System.Xml.Serialization
 				WriteLine ("namespace " + entry.Key);
 				WriteLineInd ("{");
 				
-				if (!_config.NoReader)
+				if (_config == null || !_config.NoReader)
 					GenerateReader (readerClassName, maps);
 				WriteLine ("");
-				if (!_config.NoWriter)
+				if (_config == null || !_config.NoWriter)
 					GenerateWriter (writerClassName, maps);
 				WriteLine ("");
 				
@@ -413,7 +413,7 @@ namespace System.Xml.Serialization
 			
 			InitHooks ();
 			
-			if (!_config.GenerateAsInternal)
+			if (_config == null || !_config.GenerateAsInternal)
 				WriteLine ("public class " + writerClassName + " : XmlSerializationWriter");
 			else
 				WriteLine ("internal class " + writerClassName + " : XmlSerializationWriter");
@@ -1207,7 +1207,7 @@ namespace System.Xml.Serialization
 		
 		public void GenerateReader (string readerClassName, ArrayList maps)
 		{
-			if (!_config.GenerateAsInternal)
+			if (_config == null || !_config.GenerateAsInternal)
 				WriteLine ("public class " + readerClassName + " : XmlSerializationReader");
 			else
 				WriteLine ("internal class " + readerClassName + " : XmlSerializationReader");
